syntax = "proto3";

package bloock;

option go_package = "github.com/bloock/bloock-sdk-go/v2/internal/bridge/proto";
option java_package = "com.bloock.sdk.bridge.proto";

import "bloock_shared.proto";
import "bloock_config.proto";

service WebhookService {
  rpc VerifyWebhookSignature(VerifyWebhookSignatureRequest)
      returns (VerifyWebhookSignatureResponse);
}

message VerifyWebhookSignatureRequest {
  ConfigData config_data = 1;
  bytes payload = 2;
  string header = 3;
  string secretKey = 4;
  bool enforceTolerance = 5;
}

message VerifyWebhookSignatureResponse {
  bool is_valid = 1;
  optional Error error = 2;
}
